# pacman

./: ChangeLog  Makefile  Makefile.in  README  TODO  cnvpkg  config.h.in  configure  configure.in  installworld  makepkg  makepkg.8.in  makepkg.conf  makeworld  pacman.8.in  pacman.c  pacman.h  pacsync  pacsync.8.in  pacsync.conf
doc/: makepkg.8.asciidoc  makepkg.8.html  makepkg.8.in  pacman.8.html  pacman.8.in
etc/: current  extra  makepkg.conf  pacman.conf  release  supfile  supfile.arch  supfile.unofficial  unstable
libftp/: ftplib.c  ftplib.h
scripts/: Makefile.am  abs  gensync  makepkg  makepkg.sh.in  makeworld  pacman-optimize  pacsync  updatesync
scripts/libmakepkg/: custom.sh.in  meson.build
scripts/libmakepkg/lint_pkgbuild/: pkgname.sh.in
src/: .pacman.c.swp  convertdb.c  db.c  db.h  list.c  list.h  md5.h  md5driver.c  pacconf.h  package.c  package.h  pacman.c  pacman.c~  pacman.h  pacsync.c  pacsync.h  rpmvercmp.c  rpmvercmp.h  strhash.c  strhash.h  util.c  util.h  vercmp.c
